kubernetes/Amer/cluster-deployment/Deployments/Traefik/traefik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
      - name: traefik
        image: traefik:latest
        ports:
        - containerPort: 80
        - containerPort: 443
        - containerPort: 8080
        args:
        - --api.insecure=true
        - --accesslog
        - --entrypoints.web.address=:80
        - --entrypoints.websecure.address=:443
        - --providers.kubernetesingress
