kubernetes/Amer/cluster-deployment/Deployments/Traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  type: NodePort
  ports:
  - name: web
    port: 80
    targetPort: 80
    nodePort: 30012
    protocol: TCP
  - name: websecure
    port: 443
    targetPort: 443
    nodePort: 30857
    protocol: TCP
  - name: admin
    port: 8080
    targetPort: 8080
    nodePort: 30013
    protocol: TCP
  selector:
    app: traefik
