kubernetes/Amer/cluster-deployment/Deployments/Traefik/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
  - name: web
    port: 80
    targetPort: 80
    nodePort: 30072
  - name: websecure
    port: 443
    targetPort: 443
    nodePort: 30433
  - name: admin
    port: 8080
    targetPort: 8080
    nodePort: 30073
