kubernetes/Amer/cluster-deployment/Deployments/Traefik/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: traefik
  namespace: traefik
spec:
  podSelector:
    matchLabels:
      app: traefik
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 8080
